# FuseVision

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  CmakeBuild.ps1  Deeplearn.md  FuseVision.qrc  FuseVision.rc  README.md  vcpkg.json
.github/workflows/: build.yml
scripts/: check-env.ps1
sdk/halcon/include/: .gitkeep
src/: CMakeLists.txt  main.cpp
src/DeepLearningWidget/: CMakeLists.txt  DatasetManagement.cpp  DatasetManagement.h  DeepLearningWidget.cpp  DeepLearningWidget.h  ModelConfig.cpp  ModelConfig.h  ModelManagement.cpp  ModelManagement.h  ProjectConfig.cpp  ProjectConfig.h  ProjectManagement.cpp  ProjectManagement.h
src/MainWindows/: CMakeLists.txt  FuseVision.cpp  FuseVision.h  Login.cpp  Login.h  SystemSettingsWidget.cpp  SystemSettingsWidget.h  UserManagementWidget.cpp  UserManagementWidget.h
src/TraditionalWidget/: CMakeLists.txt  TraditionalWidget.cpp  TraditionalWidget.h
src/core/: CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  LogMonitor.cpp  LogMonitor.h  Logger.cpp  Logger.h  PermissionGuard.cpp  PermissionGuard.h  PermissionInfo.h  PermissionRegistry.cpp  PermissionRegistry.h  SessionManager.cpp  SessionManager.h  SettingsManager.cpp  SettingsManager.h  ThemeManager.cpp  ThemeManager.h
